[package]
name = "hebe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "debug", "derive", "env", "string"] }
config = "0.14.0"
csv = "1.3.0"
derive = "1.0.0"
dialoguer = "0.11.0"
docx-rs = "0.4.17"
reqwest = "0.12.5"
serde_json = "1.0.118"
spinoff = "0.8.0"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
serde = "1.0.203"
rusqlite = "0.31.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
