[package]
name = "hebe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "derive", "env", "string"] }
config = "0.14.0"
csv = "1.3.0"
serde_json = "1.0.118"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
serde = "1.0.203"
rusqlite = "0.31.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tabled = "0.15"
